--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,9 +11,7 @@
   <body>
     <header class="header">
       <nav class="navbar">
-        <ul>
-          <li><a href="/drones">See all drones</a></li>
-        </ul>
+        <a href="/drones">See all drones</a>
       </nav>
     </header>
     {{{body}}}
