--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,12 @@
 <h2>Create a new drone</h2>
+
+<div>
+<form action="/drones/create" method="POST">
+<input type="text" name="name" placeholder="Enter Drone Name">
+<input type="number" name="propellers" min="1" placeholder="Enter Number of Propellers">
+<input type="number" name="maxSpeed" min="1" placeholder="Enter Max Speed">
+
+<button type="submit">Submit</button>
+</form>
+
+</div>
