--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,12 +1,14 @@
 <h2>Available drones</h2>
 <div class="drones-list">
 
+  <a href="/drones/create">Create a Drone</a>
   {{#each drones}}
     <h3>{{this.name}}</h3>
     <ul>
       <li>{{this.propellers}}</li>
       <li>{{this.maxSpeed}}</li>
     </ul>
-  {{/each}}
 
+  <a href="/drones/{{this.id}}/edit">Edit</a>
+  {{/each}}
 </div>
