--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,17 @@
 <h2>Update the drone</h2>
+
+<div>
+<form action="/drones/{{drone.id}}/edit" method="POST">
+<label for="name">Drone Name</label>
+<input type="text" name="name" placeholder="Enter Drone Name" value="{{drone.name}}">
+
+<label for="propellers">Number of Propellers</label>
+<input type="number" name="propellers" min="1" placeholder="Enter Number of Propellers" value="{{drone.propellers}}">
+
+<label for="maxSpeed">Max Speed</label>
+<input type="number" name="maxSpeed" min="1" placeholder="Enter Max Speed" value="{{drone.maxSpeed}}">
+
+<button type="submit">Update</button>
+</form>
+
+</div>
