finished lab, only missing styles

--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -9,6 +9,9 @@
       <li>{{this.maxSpeed}}</li>
     </ul>
 
-  <a href="/drones/{{this.id}}/edit">Edit</a>
+    <a href="/drones/{{this.id}}/edit">Edit</a>
+    <form action="/drones/{{this.id}}/delete" method="POST">
+      <button type="submit">Delete Drone</button>
+    </form>
   {{/each}}
 </div>
