some CSS styling of background and buttons

--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -6,7 +6,7 @@
 <input type="number" name="propellers" min="1" placeholder="Enter Number of Propellers">
 <input type="number" name="maxSpeed" min="1" placeholder="Enter Max Speed">
 
-<button type="submit">Submit</button>
+<button class="btn btn-outline-info" type="submit">Submit</button>
 </form>
 
 </div>
