--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -11,7 +11,7 @@
 <label for="maxSpeed">Max Speed</label>
 <input type="number" name="maxSpeed" min="1" placeholder="Enter Max Speed" value="{{drone.maxSpeed}}">
 
-<button type="submit">Update</button>
+<button class="btn btn-outline-primary" type="submit">Update</button>
 </form>
 
 </div>
