--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,20 +14,20 @@
     <header class="header">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">ALE AND KIM'S DRONE MECHANIC SHOP</a>
+    <a class="navbar-brand nb" href="#">ALE AND KIM'S DRONE MECHANIC SHOP</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/drones">See all drones</a> 
+          <a class="nav-link active nb" aria-current="page" href="/drones">See all drones</a> 
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Incredible Drone Sounds Made by Alejandro</a>
+          <a class="nav-link nb" href="#">Incredible Drone Sounds Made by Alejandro</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link nb" href="#">Pricing</a>
         </li>
       </ul>
     </div>
